OO-4740: support inline images in forum